# depcheck

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs  parser.rs  pyproject.rs  visitor.rs
