[package]
name = "depcheck"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100" }
clap = { version = "4.5.50", features = ["derive"] }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.14.1" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.14.1" }
